# floating-todo

./: CHANGELOG.md  README.md  gen_icon.py  gen_icon2.py  index.html  package-lock.json  package.json  vite.config.ts
scripts/: convert-work-log.mjs
src/: App.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  main.rs  models.rs
